--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,8 @@
             </intent-filter>
         </activity>
 
-    </application>
+    <activity android:name="CaseView" android:label="@string/caseView.title"></activity>
+</application>
     <uses-sdk android:minSdkVersion="4" />
 
 </manifest> 
