Refactored src directory to be Maven standard

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,6 @@
 	</properties>
 	<build>
 		<finalName>${project.artifactId}</finalName>
-		<sourceDirectory>src</sourceDirectory>
 		<plugins>
 			<plugin>
 				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
@@ -41,6 +40,15 @@
 		</plugins>
 	</build>
 	<dependencies>
+		<!-- unit test dependencies LEAVE THESE AT THE TOP!!! -->
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>5.9</version>
+			<scope>test</scope>
+			<classifier>jdk15</classifier>
+		</dependency>
+		
 		 <dependency>
 			<groupId>com.redhat.gss</groupId>
 			<artifactId>support-services-api</artifactId>
@@ -61,7 +69,12 @@
 			<artifactId>android</artifactId>
 			<version>1.6_r2</version>
 			<scope>provided</scope>
-		</dependency>	
+		</dependency>
+		<dependency>
+			<groupId>org.simpleframework</groupId>
+			<artifactId>simple-xml</artifactId>
+			<version>2.4</version>
+		</dependency>
 	</dependencies>
 
 </project>
