Reverted to before adding my parser and folder refactoring, sry pcon ;-)

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	</properties>
 	<build>
 		<finalName>${project.artifactId}</finalName>
+		<sourceDirectory>src</sourceDirectory>
 		<plugins>
 			<plugin>
 				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
@@ -40,15 +41,6 @@
 		</plugins>
 	</build>
 	<dependencies>
-		<!-- unit test dependencies LEAVE THESE AT THE TOP!!! -->
-		<dependency>
-			<groupId>org.testng</groupId>
-			<artifactId>testng</artifactId>
-			<version>5.9</version>
-			<scope>test</scope>
-			<classifier>jdk15</classifier>
-		</dependency>
-		
 		 <dependency>
 			<groupId>com.redhat.gss</groupId>
 			<artifactId>support-services-api</artifactId>
@@ -69,12 +61,7 @@
 			<artifactId>android</artifactId>
 			<version>1.6_r2</version>
 			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.simpleframework</groupId>
-			<artifactId>simple-xml</artifactId>
-			<version>2.4</version>
-		</dependency>
+		</dependency>	
 	</dependencies>
 
 </project>
