--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,7 @@
       package="com.redhat.gss.avalon.android"
       android:versionCode="1"
       android:versionName="1.0">
+    <users-permission android:name="android.permission.INTERNET" />
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".ShowHome"
                   android:label="@string/app_name">
@@ -11,6 +12,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+	   <activity android:name=".Preferences"
+			android:label="@string/setup" />
 
     <activity android:name="CaseView" android:label="@string/caseView.title"></activity>
 </application>
