--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.redhat.gss.avalon.android"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <users-permission android:name="android.permission.INTERNET" />
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".ShowHome"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-	   <activity android:name=".Preferences"
-			android:label="@string/setup" />
+	package="com.redhat.gss.avalon.android"
+	android:versionCode="1"
+	android:versionName="1.0">
 
-    <activity android:name="CaseView" android:label="@string/caseView.title"></activity>
-</application>
-    <uses-sdk android:minSdkVersion="4" />
-
+	<users-permission android:name="android.permission.INTERNET" />
+	<application android:icon="@drawable/icon" android:label="@string/app_name">
+		<activity android:name=".ShowHome"
+				android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+		<activity android:name=".Preferences"
+				android:label="@string/setup" />
+		<activity android:name="CaseView" 
+				android:label="@string/caseView.title" />
+	</application>
+	<uses-sdk android:minSdkVersion="4" />
 </manifest> 
